# proxmox-mcp

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
k8s/: deployment.yaml
src/homelab_mcp/: __init__.py  config.py  server.py
src/proxmox_mcp/: __init__.py  config.py  proxmox_client.py  server.py
src/proxmox_mcp/tools/: __init__.py  vms.py
tests/: __init__.py  test_proxmox_client.py
